Created TBuffer class so I can begin refactoring toward ITextTile.

--- a/pk.min.org
+++ b/pk.min.org
@@ -15,9 +15,10 @@
   interface uses xpc, rings, li;
     <<type:token>>
     <<type:anchor>>
-    <<type:buffer>>
+    <<type:TBuffer>>
     <<type:span>>
   implementation
+    <<@imp:TBuffer>>
   end.
 #+end_src
 
