--- a/st.min.org
+++ b/st.min.org
@@ -27,25 +27,22 @@ A =TBuffer= is essentially a composite version of =ITextTile=.
 #+name: type:TBuffer
 #+begin_src pascal
   type
-    TBuffer = class ( li.nodelist )
-    // type cursor = li.nodelist.cursor;
-    protected
-      nodes : li.nodelist;
-    public
-      constructor Create;
-
-      function make_cursor : cursor; reintroduce; deprecated;
-
-      function  GetLength : cardinal;
-      function  GetLine(i:cardinal) : string;
-      procedure SetLine(i:cardinal; s:string);
-      procedure InsLine(i:cardinal; s:string);
-      procedure AddLine(s:string);
-      procedure DelLine(i:cardinal);
-      property length : cardinal read GetLength;
-      property lines[i:cardinal]:string
-        read GetLine write SetLine; default;
-    end;
+    TBuffer = class
+      private
+        nodes : li.nodelist;
+        type cursor = li.nodelist.cursor;
+      public
+        constructor Create;
+        function  GetLength : cardinal;
+        function  GetLine(i:cardinal) : string;
+        procedure SetLine(i:cardinal; s:string);
+        procedure InsLine(i:cardinal; s:string);
+        procedure AddLine(s:string);
+        procedure DelLine(i:cardinal);
+        property length : cardinal read GetLength;
+        property lines[i:cardinal]:string
+          read GetLine write SetLine; default;
+      end;
 #+end_src
 
 *** TYPE token
@@ -155,7 +152,7 @@ They are expected to display themselves, just like textual nodes.
     filename          : string;
     message           : string;
     x, y, h, w        : integer;
-    topline, position : buf.TBuffer.cursor;
+    topline, position : cardinal;
     led               : ui.zinput;  // led = (L)ine (ED)itor
     constructor Create;
     function Load( path : string ) : boolean;
