--- a/pk.min.org
+++ b/pk.min.org
@@ -12,7 +12,7 @@
 #+begin_src pascal :tangle ".gen/buf.pas" :padline yes :noweb tangle
   {$mode objfpc}{$i xpc.inc}
   unit buf;
-  interface uses xpc, rings, li;
+  interface uses xpc, rings, tiles, li;
     <<type:token>>
     <<type:anchor>>
     <<type:TBuffer>>
@@ -30,7 +30,7 @@
 #+begin_src pascal :tangle ".gen/mn.pas" :noweb tangle
   {$mode objfpc}{$i xpc.inc}
   unit mn;
-  interface uses xpc, li, fs, stri, num, cw, buf, ui, kvm, kbd, cli;
+  interface uses xpc, li, fs, stri, num, cw, buf, ui, kvm, kbd, cli, tiles;
     <<type:editor>>
     <<type:span>>
   implementation
