--- a/pk.min.org
+++ b/pk.min.org
@@ -30,7 +30,7 @@
 #+begin_src pascal :tangle ".gen/mn.pas" :noweb tangle
   {$mode objfpc}{$i xpc.inc}
   unit mn;
-  interface uses xpc, li, fs, stri, num, cw, buf, ui, kvm, kbd, cli, tiles;
+  interface uses xpc, fs, stri, num, cw, buf, ui, kvm, kbd, cli, tiles;
     <<type:editor>>
     <<type:span>>
   implementation
